--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to HyG's Blog!</h1>
-        <small>这里记录着我的前端学习之路</small>
+        <h1>------------------->welcome to sixgod Space</h1>
+        <small>0v0 @v@ #v# $v$ ^v^ *v* TvT</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
