--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>------------------->朔-------------------</h1>
-        <small>0v0 @v@ #v# $v$ ^v^ *v* TvT</small>
+        <small>0v0&emsp;&emsp;@v@&emsp;&emsp;#v#&emsp;&emsp;$v$&emsp;&emsp;^v^&emsp;&emsp;*v*&emsp;&emsp;TvT</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
