--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>------------------->朔-------------------</h1>
-        <small>0v0&emsp;&emsp;@v@&emsp;&emsp;#v#&emsp;&emsp;$v$&emsp;&emsp;^v^&emsp;&emsp;*v*&emsp;&emsp;TvT</small>
+		<font size="6">>>>朔</font>
+		<br/><font size="5" color="blue">梦断魂&emsp; 步阑珊&emsp; 千杯醉&emsp; 百花残</font>
         <hr>
         <ul>
             {% for post in paginator.posts %}
@@ -143,7 +143,6 @@ layout: default
                     {% endfor %}
                 </div>
             </div>
-
             <!-- <div class="side">
                 <div>
                     <i class="fa fa-external-link"></i>
